# hexlet-autotests

./: pyproject.toml
tests/: test_capitalize.py  test_capitalize2.py
